--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/typescript": "^2.0.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@types/passport": "^1.0.12",
