--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./dist/server.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "build": "tsc",
-    "start": "npm run build && node dist/server.js",
+    "build": "npm install && tsc",
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,13 +24,15 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.4",
     "@types/typescript": "^2.0.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "@types/passport": "^1.0.12",
     "@types/passport-google-oauth20": "^2.0.11",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
