--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "./dist/server.js",
   "scripts": {
     "dev": "ts-node-dev src/server.ts",
-    "build": "tsc",
-    "start": "npm run build && node dist/server.js",
+    "build": "npm install && tsc",
+    "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
