--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/passport-google-oauth20": "^2.0.11",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
